--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "odsc2024"
+name = "pres"
 version = "0.1.0"
-description = "odsc2024"
+description = "pres"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
